objects/UNITY_Attachment__c.object
<CustomObject>
    <description>UNITY Attachment object</description>
    <fields>
        <fullName>Customer_Ultimate_Parent_Text__c</fullName>
        <description>Text version of the work orders&apos;s customer&apos;s UNITY_Company formula field. This is temporarily used for the Ross community project.</description>
        <label>Customer Ultimate Parent Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Standard_Attachment_Id__c</fullName>
        <description>It stores standard attachment id</description>
        <label>Standard Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Check Request Form</fullName>
                </value>
                <value>
                    <fullName>Completed Survey</fullName>
                </value>
                <value>
                    <fullName>Copy of Supplier Parts</fullName>
                </value>
                <value>
                    <fullName>Credit Card Authorization</fullName>
                </value>
                <value>
                    <fullName>Customer Correspondence</fullName>
                </value>
                <value>
                    <fullName>Customer-Specific Service Report Sign-Off</fullName>
                </value>
                <value>
                    <fullName>Damage &amp; Abuse - Before &amp; After Pictures</fullName>
                </value>
                <value>
                    <fullName>Deposit Check</fullName>
                </value>
                <value>
                    <fullName>IVR Check in and Check out (Labor)</fullName>
                </value>
                <value>
                    <fullName>Lien Waiver</fullName>
                </value>
                <value>
                    <fullName>Miner Sign Off Sheet</fullName>
                </value>
                <value>
                    <fullName>Note To Biller</fullName>
                </value>
                <value>
                    <fullName>PM Checklist completed</fullName>
                </value>
                <value>
                    <fullName>PM Failures</fullName>
                </value>
                <value>
                    <fullName>Shipping Documents</fullName>
                </value>
                <value>
                    <fullName>Vendor&apos;s Estimate</fullName>
                </value>
                <value>
                    <fullName>Vendor&apos;s Invoice</fullName>
                </value>
                <value>
                    <fullName>Vendor Correspondence</fullName>
                </value>
                <value>
                    <fullName>W-9</fullName>
                </value>
                <value>
                    <fullName>Walmart - Ready to Invoice Still needs Paperwork</fullName>
                </value>
                <value>
                    <fullName>Warranty Information</fullName>
                </value>
                <value>
                    <fullName>Work Acknowledgment Form (Service Sign-Off)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Work_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Atch-{0000000000}</displayFormat>
        <label>Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Vendor_Community__c</fullName>
        <label>Vendor Community</label>
    </sharingReasons>
</CustomObject>